Library Override: Crash overriding particles system #81674

Closed
opened 2020-10-13 14:56:47 +02:00 by Marco · 9 comments
Member

System Information
Operating system: WIndows 10
Graphics card: Nvidia RTX 2080ti

Blender Version
Broken: 2.91 Alpha

Short description of error
screenshot.png
Clicking on "Define Override" crashes Blender
Test.blend

Exact steps for others to reproduce the error

  • Link a collection with an object that contains a particles system
  • Go to the particles settings of the object
  • Right click on the particles system and click on "Define Override"
**System Information** Operating system: WIndows 10 Graphics card: Nvidia RTX 2080ti **Blender Version** Broken: 2.91 Alpha **Short description of error** ![screenshot.png](https://archive.blender.org/developer/F8986304/screenshot.png) Clicking on "Define Override" crashes Blender [Test.blend](https://archive.blender.org/developer/F8986309/Test.blend) **Exact steps for others to reproduce the error** - Link a collection with an object that contains a particles system - Go to the particles settings of the object - Right click on the particles system and click on "Define Override"
Author
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Your file is missing the library though, I was testing with these:
main.blend

src.blend

Can confirm. Your file is missing the library though, I was testing with these: [main.blend](https://archive.blender.org/developer/F8986402/main.blend) [src.blend](https://archive.blender.org/developer/F8986403/src.blend)
Author
Member

thank you for the heads up, yet can't find how to include them to the blend file... would really like to know how so that i can update the file.

thank you for the heads up, yet can't find how to include them to the blend file... would really like to know how so that i can update the file.
Bastien Montagne self-assigned this 2020-10-13 20:33:25 +02:00

Fix incoming, but please note that using this here is rather useless ;)

Fix incoming, but please note that using this here is rather useless ;)

This issue was referenced by 72cfeb2c4e

This issue was referenced by 72cfeb2c4ee38eb53b805ac775b5809b1df65660

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81674
No description provided.