Fix T81674: LibOverride: 'Define Override' UI operation can crash.

Case where RNA is not able to generate a proper path for a property was
not taken into account properly.